<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MarketActivity">

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/fullItemTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/full_item_price"/>

    <TextView
        android:id="@+id/fullItemPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/blueprintImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/neuroptics"/>

        <TextView
            android:id="@+id/blueprintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/blueprint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/neuropticsImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/neuroptics"/>

        <TextView
            android:id="@+id/neuropticsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/neuroptics"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/chassisImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/chassis"/>

        <TextView
            android:id="@+id/chassisTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/chassis"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/systemsImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/systems"/>

        <TextView
            android:id="@+id/systemsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/systems"/>
    </LinearLayout>
</LinearLayout>